--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -4,28 +4,56 @@
 {% block content %}
 <style>
 @import url('https://fonts.googleapis.com/css?family=Nanum+Gothic|Nanum+Myeongjo|Noto+Sans+KR&display=swap&subset=korean');
-#dragBox{
-  border:2px dotted #3292A2;
-  width:70%;
-  height:300px;
-  color:#92AAB0;
-  text-align:center;
-  font-size:24px;
-  padding-top:12px;
-  margin-top:50px;
-}
+.dropzone{
+   width:70%;
+   height:50%;
+   border:3px dashed #d3d3d3;
+   color:white;
+   background-color: #F5E1DB;
+   line-height:300px;
+   text-align:center;
+   margin: 0 auto;
+   font-family:'Nanum Gothic', serif;
+   font-size:20px;
+ }
+.dropzone.dragover{
+    border-color:#000;
+    color:#000;
+ }
 .intro1{
   font-family:'Noto Sans KR', sans-serif;
   font-size:30px;
-  margin-bottom:20px;
-  margin-top:15px;
+  margin-bottom:18px;
+  margin-top:13px;
 }
 .intro2{
   font-family:'Nanum Myeongjo', serif;
   font-size:18px;
-  margin-bottom:15px;
+  margin-bottom:50px;
 }
+
+.upload_test{
+  margin-top: 15px;
+}
+
+.upload_button{
+  background-color: #F2977E;
+  border: none;
+  color: white;
+  padding: 8px 28px;
+  text-align: center;
+  font-size: 16px;
+  margin: 10px 2px;
+  opacity: 0.6;
+  transition: 0.3s;
+  display: inline-block;
+  text-decoration: none;
+  cursor: pointer;
+}
+.upload_button:hover {opacity: 1}
 </style>
+
+
 <div class = "container intro1">
   <div class = "row justify-content-md-center">
     <div class = "col-md-auto">
@@ -36,13 +64,52 @@
 <div class = "container intro2">
   <div class = "row justify-content-md-center">
     <div class = "col-md-auto">
-          악보 조옮김을 할 수 있는 가장 쉬운 방법
+          악보 조옮김을 할 수 있는, 가장 쉬운 방법을 제공합니다
     </div>
   </div>
 </div>
-<div id = "dragBox">
-  <div class = "row">
-    여기로 악보 PDF 파일을 드래그 앤 드롭 하세요.
+
+
+<div id="upload"></div>
+<div class="dropzone" id="dropzone">여기로 악보 PDF 파일을
+드래그 앤 드롭하여 업로드 하세요.</div>
+
+<script>
+    (function(){
+    var dropzone=document.getElementById('dropzone');
+
+
+    dropzone.ondrop=function(e){
+    fileinput.files=e.dataTransfer.files
+    e.preventDefault();
+    this.className='dropzone';
+
+    x=e.dataTransfer.files
+    console.log(x)
+    };
+
+    dropzone.ondragover=function(){
+    this.className='dropzone dragover';
+    return false;
+    };
+
+    dropzone.ondragleave=function(){
+     this.className='dropzone';
+
+     return false;
+     };
+    }());
+
+</script>
+
+<div class = "container upload_test">
+  <div class = "row justify-content-md-center">
+    <div class = "col-md-auto">
+      <form method="POST"  enctype="multipart/form-data" novalidate>
+        {% csrf_token %}
+        <button type="submit" class="upload_button">Upload</button>
+      </form>
+    </div>
   </div>
 </div>
 {% endblock %}
