add uploading functions and templates

--- a/main/templates/header.html
+++ b/main/templates/header.html
@@ -20,7 +20,7 @@
       <div class = "container">
         <div class = "row justify-content-md-center">
           <div class = "col-md-auto">
-          <a class="navbar-brand LOGO" href=""><img src="{% static "img/logo_temp.png" %}" height="90" width = "480"></a>
+          <a class="navbar-brand LOGO" href="/"><img src="{% static "img/logo_temp.png" %}" height="90" width = "480"></a>
           </div>
         </div>
       </div>
